<resources>
    <string name="app_name">FieldSalesSmartGarage</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_your_otp">Enter your Otp</string>
    <string name="enter_name">Enter Name</string>
    <string name="manager_signup">Manager Signup</string>
    <string name="verify">Verify</string>
    <string name="sign_up">Sign-up</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_id">Email Id</string>
    <string name="manager_login">Manager Login</string>
    <string name="email_id_mobile_number">Email-id/Mobile Number</string>
    <string name="forget_password">Forget Password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="create_visit">Create Visit</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string-array name="quantityvalue">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
