<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manager_login_screen_background"
    tools:context=".view.SignupActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pikpartlogo"
        android:layout_marginTop="@dimen/height50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/textManagerSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        android:layout_marginTop="@dimen/height50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="26sp"/>



    <EditText
        android:id="@+id/editTextEmailOrMobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50dp"
        app:layout_constraintTop_toBottomOf="@id/textManagerSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_id_mobile_number"
        android:layout_marginTop="@dimen/margin20dp"
        android:padding="@dimen/padding8dp"
        android:layout_marginStart="@dimen/margin30dp"
        android:layout_marginEnd="@dimen/margin30dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMobileVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailOrMobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding10dp"
        android:layout_marginStart="@dimen/margin30dp"
        android:layout_marginEnd="@dimen/margin30dp">

        <EditText
            android:id="@+id/editTextMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_mobile_number"
            android:padding="@dimen/padding8dp"
            />

        <TextView
            android:id="@+id/textVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/margin20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/blue_version1"
            android:padding="@dimen/padding8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50dp"
        app:layout_constraintTop_toBottomOf="@id/layoutMobileVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background"
        android:hint="@string/new_password"
        android:layout_marginTop="@dimen/padding10dp"
        android:padding="@dimen/padding8dp"
        android:layout_marginStart="@dimen/margin30dp"
        android:layout_marginEnd="@dimen/margin30dp"/>

    <EditText
        android:id="@+id/editTextReenterPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background"
        android:hint="@string/re_enter_new_password"
        android:layout_marginTop="@dimen/padding10dp"
        android:padding="@dimen/padding8dp"
        android:layout_marginStart="@dimen/margin30dp"
        android:layout_marginEnd="@dimen/margin30dp"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height60dp"
        android:text="@string/submit"
        android:textSize="@dimen/btntxtsize"
        android:backgroundTint="@color/blue_version1"
        app:layout_constraintTop_toBottomOf="@id/editTextReenterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin20dp"/>










</androidx.constraintlayout.widget.ConstraintLayout>