<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/manager_login_screen_background"
    android:layout_height="match_parent"
    tools:context=".view.ManagerLoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pikpartlogo"
        android:layout_marginTop="@dimen/height50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/textManagerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        android:layout_marginTop="@dimen/height50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50dp"
        app:layout_constraintTop_toBottomOf="@id/textManagerLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_id_mobile_number"
        android:layout_marginTop="@dimen/margin20dp"
        android:padding="@dimen/padding8dp"
        android:layout_marginStart="@dimen/margin30dp"
        android:layout_marginEnd="@dimen/margin30dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50dp"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_password"
        android:layout_marginTop="@dimen/padding10dp"
        android:padding="@dimen/padding8dp"
        android:layout_marginStart="@dimen/margin30dp"
        android:layout_marginEnd="@dimen/margin30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height60dp"
        android:text="@string/log_in"
        android:textSize="@dimen/btntxtsize"
        android:backgroundTint="@color/blue_version1"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin20dp"/>

    <TextView
        android:id="@+id/textForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/red_shade"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/padding10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginEnd="@dimen/margin20dp"
        android:padding="@dimen/padding8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>